dark mode issue resolved

--- a/src/app/category/category.component.scss
+++ b/src/app/category/category.component.scss
@@ -1,5 +1,9 @@
-p.noStoreInCategpry{
-    font-size: 2em;
-    text-align: center;
-    margin-top: 4vh;
+p.noStoreInCategpry {
+  font-size: 2em;
+  text-align: center;
+  margin-top: 4vh;
+}
+select,
+select > option {
+  color: black !important;
 }
